--- a/Views/Home/Contacto.cshtml
+++ b/Views/Home/Contacto.cshtml
@@ -95,7 +95,7 @@
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1024px-Facebook_Logo_%282019%29.png"
                             alt="" width="150" height="150">
                     </a>
-                    <a href="https://www.facebook.com/"> ZonaBiciCentroFB.com </a>
+                    <a href="https://www.facebook.com/" class="ta"> ZonaBiciCentroFB.com </a>
                 </div>
                 <div class="w-100 d-none d-md-block">
                     <br>
@@ -107,7 +107,7 @@
                         <img src="https://i.pinimg.com/originals/91/9d/f0/919df067a8fbd22ce7b6f401b7688b35.png" alt=""
                             width="150" height="150">
                     </a>
-                    <a href="https://www.whatsapp.com/?lang=en">+51 980 124 123</a>
+                    <a href="https://www.whatsapp.com/?lang=en" class="ta">+51 980 124 123</a>
                 </div>
 
                 <div class="col-6 col-sm-4">
@@ -116,7 +116,7 @@
                         <img src="https://cdn.icon-icons.com/icons2/2631/PNG/512/gmail_new_logo_icon_159149.png" alt=""
                             width="150" height="150">
                     </a>
-                    <a href="https://www.google.com/intl/es-419/gmail/about/#">ZonaBici@gmail.com</a>
+                    <a href="https://www.google.com/intl/es-419/gmail/about/#" class="ta">ZonaBici@gmail.com</a>
                 </div>
             </div>
             <div class="col-md-2">
