--- a/Views/Producto/Registro.cshtml
+++ b/Views/Producto/Registro.cshtml
@@ -5,6 +5,9 @@
 }
 <h1 style="text-align: center;">Formulario de registro de Bicicletas</h1>
 
+<a class="btn btn-danger" href="/Producto/Bicicleta" role="button">Regresar</a>
+<br>
+
 <div class="container col-md-5">
 
     <form asp-controller="Producto" asp-action="Registrar">
