--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,6 +53,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacto">
                                 <strong>Contacto</strong></a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Producto" asp-action="Bicicleta">
+                                <strong>Registro Productos</strong></a>
+                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Proforma" asp-action="Index">
                                 <strong>Carrito</strong></a>
