--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -15,7 +15,16 @@ a {
 .back {
   background-color: #384656;
   color: #fff;
+  
 }
+
+.back3 {
+  background-color: #FFFFFF;
+  color: #0E0202;
+  
+}
+
+
 
 .back2 {
   background-color: #b2d320;
