--- a/Views/Producto/Editar.cshtml
+++ b/Views/Producto/Editar.cshtml
@@ -9,7 +9,7 @@
 
     <form asp-controller="Producto" asp-action="Editar">
 
-        <div class="form-group">
+         <div class="form-group">
             <label asp-for="Name" class="control-label"></label>
             <input asp-for="Name" class="form-control">
             <span asp-validation-for="Name" class="text-danger"></span>
@@ -39,6 +39,9 @@
             <span asp-validation-for="Descripcion" class="text-danger"></span>
         </div>
 
+        <strong>Nota: </strong>
+        <p>Sección solo para bicicletas</p>
+
         <div class="form-group">
             <label asp-for="Categoria" class="control-label"></label>
             <select asp-for="Categoria">
@@ -47,6 +50,30 @@
                 <option value="ruteras">Ruteras</option>
                 <option value="electrica">Eléctrica</option>
                 <option value="infantil">Infantil</option>
+                <option value="">Ninguno</option>
+            </select>
+        </div>
+
+        <br>
+
+
+        <div class="form-group">
+            <label asp-for="Tipo" class="control-label"></label>
+            <select asp-for="Tipo">
+                <option value="bicicleta">Bicicleta</option>
+                <option value="accesorio">Accesorio</option>
+                <option value="indumentaria">Indumentaria</option>
+            </select>
+        </div>
+
+        <strong>Nota: </strong>
+        <p>Sección solo para indumentaria</p>
+        <div class="form-group">
+            <label asp-for="Modelo" class="control-label"></label>
+            <select asp-for="Modelo">
+                <option value="casco">Cascos</option>
+                <option value="guantes">Guantes</option>
+                <option value="">Ninguno</option>
             </select>
         </div>
 
