--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -3,12 +3,21 @@
 @{
   ViewData["Title"] = "Lista de Productos Registrados";
 }
-<h1 style="text-align:center;">Catalogo de Productos</h1>
+
+
+
+
+  
+<a class="btn btn-success" href="/Producto/Bicicleta" role="button">Regresar</a>
+<br>
+
+<h1 style="text-align:center;">Listado de Productos</h1>
+<br>
 
 <table class="table table-hover" style="text-align: center;">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">#</th>
+      <th scope="col">Acciones</th>
       <th scope="col">@Html.DisplayNameFor(model => model.Name)</th>
       <th scope="col">@Html.DisplayNameFor(model => model.Image)</th>
       <th scope="col">@Html.DisplayNameFor(model => model.Price)</th>
@@ -22,14 +31,16 @@
 
       <tr>
         <th scope="row">
-          <a asp-action="Editar" asp-route-id="@item.Id">Editar</a> |
-          <a asp-action="Eliminar" asp-route-id="@item.Id">Eliminar</a>
+          <a class="btn btn-primary" asp-action="Editar" asp-route-id="@item.Id">Editar</a> |
+          <a class="btn btn-danger" asp-action="Eliminar" asp-route-id="@item.Id">Eliminar</a>
         </th>
         <td>@Html.DisplayFor(modelItem => item.Name)</td>
-        <td> <img src="@item.Image" alt="" width="400px" height="400px"></td>
+        <td>  <img class="img-responsive" width="90" height="100" src="/img/@item.Image" alt="@item.Image" /></td>
         <td>S/.@Html.DisplayFor(modelItem => item.Price)</td>
+        <td>@Html.DisplayFor(modelItem => item.Amout)</td>
       </tr>
 
     }
   </tbody>
 </table>
+
