--- a/Views/Catalogo/Catalogo3.cshtml
+++ b/Views/Catalogo/Catalogo3.cshtml
@@ -33,8 +33,15 @@
               </a>
               <p class="card-text"> Precio: S/.@Html.DisplayFor(modelItem => item.Price)</p>
               <p class="card-text"> Stock:@Html.DisplayFor(modelItem => item.Amout)</p>
-              <a class="btn btn-primary " asp-action="Add" asp-route-id="@item.Id"><strong>Añadir</strong></a>
+              <p class="card-text"> Stock: @Html.DisplayFor(modelItem => item.Amout) unidades</p>
+                 @if(User.IsInRole("Administradores" )){      
+              <a class="btn btn-info" asp-action="Details3" asp-route-id="@item.Id"><strong>Detalles</strong></a>
+               }else if(User.IsInRole("OperadoresVentas" )){
+                <a class="btn btn-info" asp-action="Details3" asp-route-id="@item.Id"><strong>Detalles</strong></a>
+              }else{           
+              <a class="btn btn-primary " asp-action="Add" asp-route-id="@item.Id"><strong>Añadir</strong></a>           
               <a class="btn btn-info" asp-action="Details3" asp-route-id="@item.Id"><strong>Detalle</strong></a>
+              }         
             </div>
           </div>
         </div>
