--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -8,9 +8,9 @@
 
 
   
-@* <a class="btn btn-success" href="/Producto/Bicicleta" role="button">Regresar</a>
+ <a class="btn btn-success" href="/Producto/Bicicleta" role="button">Regresar</a>
 <br>
- *@
+ 
 <h1 style="text-align:center;">Listado de Productos</h1>
 <br>
 
