--- a/Views/Producto/Registro.cshtml
+++ b/Views/Producto/Registro.cshtml
@@ -5,8 +5,8 @@
 }
 <h1 style="text-align: center;">Formulario de registro de Bicicletas</h1>
 
-@* <a class="btn btn-danger" href="/Producto/Bicicleta" role="button">Regresar</a>
-<br> *@
+ <a class="btn btn-danger" href="/Producto/Bicicleta" role="button">Regresar</a>
+<br> 
 
 <div class="container col-md-5">
 
