--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,6 +56,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Producto" asp-action="Index">
                                 <strong>Lista de Productos</strong></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Producto" asp-action="Registro">
+                                <strong>Registrar Productos</strong></a>
+                        </li>
                        
                         <partial name="_LoginPartial" />
                     </ul>
